--- a/index.css
+++ b/index.css
@@ -67,7 +67,6 @@ body{
 }
 
 /* EXAMPLE 3 */
-
 #example-3{
     width: 5em;
     height: 1em;
@@ -77,12 +76,12 @@ body{
     align-items: center;
 
     border: 0.3em solid var(--loader-bg-color);
-    border-left: 0.3em solid var(--loader-acc-color);
+    border-right: 0.3em solid var(--loader-acc-color);
     
     background-color: var(--loader-bg-color);
    
     animation-name: example-three;
-    animation-duration: 4s;
+    animation-duration: 3s;
     animation-iteration-count: infinite;
 }
 
@@ -94,46 +93,55 @@ body{
 
 
 /* EXAMPLE 4 */
-
 #example-4{
-    position: relative;
-    width: 10em;
-    height: 10em;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+
+.ball-container{
+    width: 1.5em;
+    height: 1.5em;
+    margin-right: 0.8em;
+
+    display: flex;
+    align-items: center;
+    justify-content:center;
 }
 
 .ball {
     position: absolute;
-    width: 0em;
-    height: 0em;
+    width: 0;
+    height: 0;
     border-radius: 50%;
     background-color: var(--loader-bg-color);
-    margin: 0.2em;
+
     animation-name: example-four;
-    animation-duration: 1.5s;
+    animation-duration: 1.2s;
     animation-iteration-count: infinite;
 }
-#ball-1{
-    top: 2em;
-    left: 0em;
-}
-#ball-2{
-    top: 2em;
-    left: 3em;
-    animation-delay: 0.5s;
-}
-#ball-3{
-    top: 2em;
-    left: 6em;
-    animation-delay: 1s;
-}
+#ball-2{animation-delay: 0.1s;}
+#ball-3{animation-delay: 0.2s;}
 
 @keyframes example-four{
-    from  {
+    0%  {
         width: 0;
         height: 0;
     }
-    to {
-        width: 2em;
-        height: 2em;
+    20% {
+        width: 1.5em;
+        height: 1.5em;
+    }
+    25%{
+        width: 1.5em;
+        height: 1.5em;
+    }
+    90%{ 
+        width: 0;
+        height: 0;
+    }
+    100%{ 
+        width: 0;
+        height: 0;
     }
 }
