--- a/index.css
+++ b/index.css
@@ -12,19 +12,19 @@ body{
 }
 
 .loader{
-    margin-top: 50px;
+    margin-top: 5em;
 }
 
 /* EXAMPLE 1 */
 #example-1{
     width: 3em;
     height: 3em;
+
     border-radius: 50%;
     border: 0.75em solid var(--loader-bg-color);
-    border-top-color: var(--loader-acc-color);
-    animation-name: example-one;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
+    border-top-color: var(--loader-acc-color); /* override top color so it stands out */
+    
+    animation: 2s infinite example-one;
 }
 
 @keyframes example-one{
@@ -32,11 +32,12 @@ body{
     to {transform: rotate(360deg)}
 }
 
-/* EXAMPLE 2 */
 
+/* EXAMPLE 2 */
 #example-2{
     width: 5em;
     height: 5em;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,9 +52,7 @@ body{
     border-left: 0.1em solid var(--loader-acc-color);
     background-color: var(--loader-bg-color);
 
-    animation-name: example-two;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
+    animation: 1.5s infinite example-two;
 }
 
 #bar-2{animation-delay: 0.25s}
@@ -66,6 +65,7 @@ body{
     100% {height: 2.5em}
 }
 
+
 /* EXAMPLE 3 */
 #example-3{
     width: 5em;
@@ -76,19 +76,16 @@ body{
     align-items: center;
 
     border: 0.3em solid var(--loader-bg-color);
-    border-right: 0.3em solid var(--loader-acc-color);
-    
+    border-right: 0.3em solid var(--loader-acc-color);    
     background-color: var(--loader-bg-color);
-   
-    animation-name: example-three;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
+
+    animation: 3s infinite example-three;
 }
 
 @keyframes example-three{
-    0% { transform: rotateY(0deg);}
+    from { transform: rotateY(0deg);}
     50% { transform: rotateY(180deg);}
-    100% { transform: rotateY(360deg);}
+    to { transform: rotateY(360deg);}
 }
 
 
@@ -116,10 +113,9 @@ body{
     border-radius: 50%;
     background-color: var(--loader-bg-color);
 
-    animation-name: example-four;
-    animation-duration: 1.2s;
-    animation-iteration-count: infinite;
+    animation: 1.2s infinite example-four;
 }
+
 #ball-2{animation-delay: 0.1s;}
 #ball-3{animation-delay: 0.2s;}
 
@@ -132,7 +128,7 @@ body{
         width: 1.5em;
         height: 1.5em;
     }
-    25%{
+    40%{
         width: 1.5em;
         height: 1.5em;
     }
