--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body{
 
     border-radius: 50%;
     border: 0.75em solid var(--loader-bg-color);
-    border-top-color: var(--loader-acc-color); /* override top color so it stands out */
+    border-top-color: var(--loader-acc-color); /* overrides top color to stand out */
     
     animation: 2s infinite example-one;
 }
@@ -31,7 +31,6 @@ body{
     from {transform: rotate(0deg)}
     to {transform: rotate(360deg)}
 }
-
 
 /* EXAMPLE 2 */
 #example-2{
@@ -71,10 +70,6 @@ body{
     width: 5em;
     height: 1em;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     border: 0.3em solid var(--loader-bg-color);
     border-right: 0.3em solid var(--loader-acc-color);    
     background-color: var(--loader-bg-color);
@@ -107,7 +102,6 @@ body{
 }
 
 .ball {
-    position: absolute;
     width: 0;
     height: 0;
     border-radius: 50%;
